python-app/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-demo-app
  namespace: app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: observability-demo-app

  template:
    metadata:
      labels:
        app: observability-demo-app

    spec:
      containers:
        - name: app
          image: 169976490560.dkr.ecr.us-east-1.amazonaws.com/my-first-github-app:master-1e65c98c61f99eee41e36c75769298a8e5e95a61

          ports:
            - containerPort: 8000
